First pass WIP
First pass at dehumidifier. Need to separate handlers next.
Signed-off-by: Bob Eckhoff <katmandodo@yahoo.com>